# musl-fts

./: config.h.meson  meson.build
include/: compat.h  reallocarr.h
src/: fts.c  reallocarr.c
